<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="percent_display">15</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="tip_display">$0.00</string>
    <string name="total_display">$00.00</string>
    <string name="calculate">Calculate</string>
    <string name="hint">Enter Bill Amount</string>
    <string name="split">Splitting the bill?</string>
    <string name="reset">reset</string>
    <string name="hint2">#</string>
</resources>
